--- a/JavaScriptRunner/package.json
+++ b/JavaScriptRunner/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://github.com/AbhiVikrant/Sinemon/tree/new_dora/JavaScriptRunner",
+  "homepage": "https://abhivikrant.github.io/Sinemon/tree/new_dora/JavaScriptRunner",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
